# api

./: CNAME  README.md  flake.nix  login.html  setup.sql  start.sh
admin/: users.html
admin/users/: index.html  invite.html
back/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
back/migrations/: 0002_add_account_hierarchy.down.sql  0002_add_account_hierarchy.up.sql  0003_add_account_invites.up.sql  0004_use_co_op_enum.down.sql  0004_use_co_op_enum.up.sql
back/src/: auth.rs  donations.rs  health.rs  main.rs  me.rs  supporters.rs  users.rs
back/src/auth/: signin.rs  signout.rs  signup.rs  validate.rs
back/src/donations/: delete.rs  get.rs  post.rs  put.rs
back/src/supporters/: delete.rs  get.rs  post.rs  put.rs
back/src/users/: auth.rs  delete.rs  email.rs  get.rs  me.rs
back/src/users/auth/: invite.rs  signin.rs  signout.rs  signup.rs  validate.rs
back/src/users/me/: get.rs  patch.rs
front/: account.html  index.html  login.html
front/admin/: index.html  users.html
front/admin/users/: invite.html
front/css/: style.css
front/js/: account.js  admin.js  login.js  main.js
front/js/admin/: users.js
front/js/admin/users/: invite.js
js/: login.js  main.js
nix/: docker.nix
nix/phpMyAdmin/: default.nix
