[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8"
axum-extra = { version = "0.12.2", features = ["with-rejection"] }
email_address = "0.2.9"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "mysql",
  "macros",
  "time",
] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
